Bug 1721952 - Don't let nsTextFragment::IsBidi get out of sync even if the document has already enabled bidi. r=smaug

It's not a sound optimization in presence of adoption.

Differential Revision: https://phabricator.services.mozilla.com/D123524