dom/base/CharacterData.cpp
@@ -265,19 +265,16 @@ nsresult CharacterData::SetTextInternal(
                                    aOffset));
 
   if (aOffset == 0 && endOffset == textLength) {
-    // Replacing whole text or old text was empty.  Don't bother to check for
-    // bidi in this string if the document already has bidi enabled.
+    // Replacing whole text or old text was empty.
     // If this is marked as "maybe modified frequently", the text should be
     // stored as char16_t since converting char* to char16_t* is expensive.
-    bool ok =
-        mText.SetTo(aBuffer, aLength, !document || !document->GetBidiEnabled(),
-                    HasFlag(NS_MAYBE_MODIFIED_FREQUENTLY));
+    bool ok = mText.SetTo(aBuffer, aLength, true,
+                          HasFlag(NS_MAYBE_MODIFIED_FREQUENTLY));
     NS_ENSURE_TRUE(ok, NS_ERROR_OUT_OF_MEMORY);
   } else if (aOffset == textLength) {
-    // Appending to existing
-    bool ok =
-        mText.Append(aBuffer, aLength, !document || !document->GetBidiEnabled(),
-                     HasFlag(NS_MAYBE_MODIFIED_FREQUENTLY));
+    // Appending to existing.
+    bool ok = mText.Append(aBuffer, aLength, !mText.IsBidi(),
+                           HasFlag(NS_MAYBE_MODIFIED_FREQUENTLY));
     NS_ENSURE_TRUE(ok, NS_ERROR_OUT_OF_MEMORY);
   } else {
     // Merging old and new
@@ -297,7 +294,7 @@ nsresult CharacterData::SetTextInternal(
     }
     if (aLength) {
       to.Append(aBuffer, aLength);
-      if (!bidi && (!document || !document->GetBidiEnabled())) {
+      if (!bidi) {
         bidi = HasRTLChars(Span(aBuffer, aLength));
       }
     }
